add build without an icon

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 ---------------- Todo list ----------------
-1. add build without an icon
-2. add more options
+! add more options
+------------------- Done ------------------
+! add build without an icon
